package org.exercise.crossplatform.ui.toolkit;

import lombok.extern.slf4j.Slf4j;


public interface Button extends Widget{
    void resize();
}
