package org.exercise.crossplatform.ui.toolkit;

import lombok.extern.slf4j.Slf4j;


public interface Checkbox extends Widget {
    public void check();
}
