package org.exercise.crossplatform.ui.toolkit;

public interface TextField extends  Widget{
    public void changeTextColor();
}
