package org.exercise.crossplatform.ui.toolkit;

public interface UIFactory {
    Button createButton();
    Checkbox createCheckbox();
    TextField createTextField();
}
