package org.exercise.crossplatform.ui.toolkit;

public interface Widget {
    public void render();
}
